# DataStructures

./: .gitignore  cleanGit.sh
7-Hash_Tables_Implementation/: CMakeLists.txt
8-Spatial_Data_Structure_Implementation/: CMakeLists.txt  mapaUsaResult.ppm
Practica_1/: Diccionario.h  Palabra.h  VectorEstatico.h  main.cpp
Practica_3/: Diccionario.cpp  Diccionario.h  Iterador.h  ListaEnlazada.h  Nodo.h  Palabra.h  VDinamico.h  main.cpp
Practica_4/: Diccionario.cpp  Diccionario.h  Palabra.h  Sucesor.h  corpus_spanish-2.txt  corpus_spanish.txt  main.cpp
Practica_5/: AVL.h  Diccionario.cpp  Diccionario.h  Palabra.cpp  TextoPredictivo.cpp  TextoPredictivo.h  main.cpp
Practica_6/: AVL.h  CMakeLists.txt  Diccionario.cpp  Diccionario.h  Palabra.cpp  Palabra.h  TextoPredictivo.cpp  TextoPredictivo.h  Usuario.cpp  Usuario.h  main.cpp
Practica_6/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  configurations.xml  project.xml
Practica_6/nbproject/private/: private.xml
Practica_7/: CMakeLists.txt  Diccionario.cpp  Diccionario.h  Palabra.cpp  Palabra.h  Sucesor.h  THashCerrada.h  TextoPredictivo.cpp  TextoPredictivo.h  Usuario.cpp  Usuario.h  main.cpp
Practica_7/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
Practica_7/nbproject/private/: private.xml
Practica_7/src/: Diccionario.h
Practica_8/: CMakeLists.txt  Casilla.h  CodigoPost.cpp  CodigoPost.h  MallaRegular.h  Palabra.h  THashCerrada.h  TextoPredictivo.cpp  TextoPredictivo.h  Usuario.cpp  Usuario.h  img.h  main.cpp  (+1 more)
Prueba/: Avl.h  (+2 more)
(+58 files in other folders)
